--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@
 
 html {
 	font: 400 1rem/1.5rem var(--font-sans-serif);
+	text-rendering: optimizeLegibility;
 }
 
 /**
@@ -61,6 +62,20 @@ html {
  */
 
 header#page-heading {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 	background: linear-gradient(to right, var(--red), var(--blood-orange), var(--muted-orange), var(--yellow));
+	padding: 1.5rem;
+	box-shadow: 0 1px 10px rgba(0, 0, 0, 0.25);
+}
+
+/** Heading. */
+header#page-heading h1 {
+	font-family: var(--font-serif);
+	font-size: 2.5rem;
+	font-weight: 900;
+	color: var(--white);
+	text-shadow: 0 1px 10px rgba(0, 0, 0, 0.25);
 }
 
